修复 ServerDetector 的 URL deprecation 警告